src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Budget_Amount__c</fullName>
        <label>Budget Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Competitors__c</fullName>
        <label>Competitors</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_CRM_System__c</fullName>
        <label>Current CRM System</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Goal__c</fullName>
        <label>Goal</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Next_Step__c</fullName>
        <label>Next Step</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>No_of_potential_users__c</fullName>
        <label>No of potential users</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pain__c</fullName>
        <label>Pain</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Primary_Product_Interest__c</fullName>
        <label>Primary Product Interest</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profile__c</fullName>
        <label>Profile</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Strategic_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is this a Strategic Account?</inlineHelpText>
        <label>Strategic Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TimeFrame__c</fullName>
        <label>TimeFrame</label>
        <type>TextArea</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>Customers_All</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.INDUSTRY</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.ADDRESS1_STREET</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.ADDRESS1_ZIP</columns>
        <columns>ACCOUNT.ADDRESS1_COUNTRY</columns>
        <columns>ACCOUNT.URL</columns>
        <columns>ACCOUNT.PHONE2</columns>
        <columns>ACCOUNT.LAST_ACTIVITY</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Customers</value>
        </filters>
        <label>Customers - All</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Suppliers_All</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STREET</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.PHONE2</columns>
        <columns>ACCOUNT.URL</columns>
        <columns>SIC_DESC</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Suppliers</value>
        </filters>
        <label>Suppliers - All</label>
    </listViews>
    <recordTypes>
        <fullName>Customers</fullName>
        <active>true</active>
        <label>Customer</label>
    </recordTypes>
    <recordTypes>
        <fullName>Extentor</fullName>
        <active>true</active>
        <label>Extentor</label>
    </recordTypes>
    <recordTypes>
        <fullName>Suppliers</fullName>
        <active>true</active>
        <label>Supplier</label>
    </recordTypes>
</CustomObject>